force-app/main/default/objects/LoadProduct__c/LoadProduct__c.object-meta.xml
<CustomObject>
    <label>Load Product</label>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>Load Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Load Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>