force-app/main/default/objects/LoadProduct__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <label>Load</label>
    <referenceTo>Load__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Load_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>