force-app/main/default/objects/LoadProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>EventProduct__c</referenceTo>
    <relationshipLabel>Loads</relationshipLabel>
    <relationshipName>LoadProducts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>